# rubiks

./: .gitignore  README.md  hie.yaml  rubiks.cabal
app/: Params.hs  Rubiks.hs
src/: BeginnerAlgorithm.hs  BruteForceAlgorithm.hs  Cube.hs  Moves.hs  Solve.hs
test/: BeginnerAlgorithmSpec.hs  CubeSpec.hs  MovesSpec.hs  RubiksTest.hs
