cabal-version:      2.4
name:               rubiks
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules: Cube
    hs-source-dirs: src
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    build-depends:
        base ^>=4.14.2.0
       ,containers ^>=0.6.5.0
    default-language: Haskell2010


executable rubiks
    main-is:          Rubiks.hs

    -- Modules included in this executable, other than Main.
    other-modules: Cube

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0
                    , mtl ^>=2.2.2
                    , containers ^>=0.6.5.0
    hs-source-dirs:   app, src
    default-language: Haskell2010
