cabal-version:      2.4
name:               rubiks
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:

executable rubiks
    main-is: Rubiks.hs
    other-modules:
        Params
        Cube
        Moves
        Solve
        BruteForceAlgorithm
        BeginnerAlgorithm
    hs-source-dirs: 
        app
        src
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0
                    , mtl >=2.0 && <2.3
                    , containers ^>=0.6.5.0
                    , optparse-applicative ^>=0.16.1.0
                    , random ^>=1.2.1
                    , digits ^>=0.3.1
    default-language: Haskell2010
